# arena-autocam

./: .autoenv.zsh  .autoenv_leave.zsh  .dev.dotenv  .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  Cross.toml  Hakufile  README.md  environment.yml  prepare-dataset.ipynb  rustfmt.toml  sample.env  tf_env.yml  tflite-training.ipynb
.cargo/: config.toml
aa_app/: Cargo.toml  Dockerfile
app/: Cargo.toml  NOTES
app/docker/: Dockerfile  start.sh
app/src/: config.rs  lib.rs  logging.rs  message.rs  system.rs  tracing.rs  util.rs
app/src/foundation/: debug.rs  geom.rs  gst.rs  mod.rs  path.rs
app/src/infer/: color_detection_sink.rs  detection_overlay.rs  detection_sink.rs  mod.rs  tf_buffer_adapter.rs
app/src/pipeline/: camera.rs  configure.rs  create.rs  mod.rs  names.rs  run.rs  source.rs
cad/: README.md  manifest.toml
cad/para/: hardware_frame.x_t  main_plate.x_t  pan_drive_gear.x_t  pan_inner_bearing_anchor.x_t  pan_outer_bearing_anchor.x_t  pan_plate.x_t  pan_reduction_gear.x_t  ssd_clip.x_t  tilt_drive_collar.x_t  tilt_drive_gear.x_t  tilt_drive_shaft.x_t  tilt_reduction_collar.x_t  tilt_reduction_shaft.x_t  tripod_connector.x_t
cad/stl/: camera_case.3mf  camera_case.stl  hardware_frame.3mf  hardware_frame.stl  lower_bottom.stl  lower_top.stl  main_plate.3mf  main_plate.stl  mount_plate.stl  pan_drive_gear.3mf  pan_drive_gear.ss.3mf  pan_drive_gear.stl  pan_inner_bearing_anchor.3mf  pan_inner_bearing_anchor.stl  pan_outer_bearing_anchor.3mf  pan_outer_bearing_anchor.stl  pan_plate.3mf  pan_plate.stl  pan_reduction_gear.3mf  pan_reduction_gear.ss.3mf  pan_reduction_gear.stl  ssd_clip.3mf  ssd_clip.stl  tilt_drive_collar.stl  tilt_drive_gear.stl  tilt_drive_shaft.stl  tilt_reduction_collar.stl  tilt_reduction_gear.stl  tilt_reduction_shaft.stl  tripod_connector.ss.3mf  tripod_connector.stl  upper_base.stl
client/: NOTES  detect.py  detect_new.py
client/scratch/smooth_follow/: main.py  smoothfollow.kv  springs.py
docker/: .env.sample  0.builder-base.dockerfile  1.builder-base.aarch64.dockerfile  1.builder-base.amd64.dockerfile  2.pre-build-io.dockerfile  3.build-rust-target.dockerfile  3.build-single-target.dockerfile  4.runner-base.dockerfile  5.run-binary.dockerfile  Dockerfile.aarch64.base  Dockerfile.amd64.base  Dockerfile.build  Dockerfile.build.aarch64-unknown-linux-gnu  build-example.dockerfile  build-single-target.dockerfile  builder-base.aarch64.dockerfile  builder-base.amd64.dockerfile  builder-base.dockerfile  docker-compose.aarch64.yaml  docker-compose.amd64.yaml  docker-compose.yaml  pre-build-io.dockerfile  tflite_prebuild.aarch64.sh
docker/config/: buildkitd.toml
docker/include/: .p10k.zsh  extract_binary_artifact.py  extract_build_artifact.py  install_dev_dependencies.sh  install_runtime_dependencies.aarch64.sh  install_runtime_dependencies.amd64.sh  install_runtime_dependencies.sh  install_shell.sh  nala.conf  rust_target_env.aarch64.sh
foundation/: Cargo.toml
foundation/src/: duration.rs  env.rs  lib.rs  prelude.rs  thread.rs  tracing.rs
foundation/src/collection/: disjoint_set_forest.rs  mod.rs
foundation/src/color/: material.rs
foundation/src/image/: color_regions.rs  connected_components.rs  mod.rs
foundation/src/spring/: config.rs  mod.rs  system.rs
foundation/src/tracing/: category.rs  macros.rs  mod.rs  subscriber.rs
foundation/src/tracing/fmt/: context.rs  format_event.rs  format_fields.rs  level.rs  mod.rs  target.rs  thread.rs
gst_plugins/: .gitignore  Cargo.toml  Cross.toml  Hakufile  Makefile.toml
gst_plugins/docker/: Dockerfile  install_deb.sh  install_tflite_build_deps.sh
gst_plugins/src/: detector_service.rs  frame.rs  lib.rs
gst_plugins/src/aainfer/: imp.rs  mod.rs
gst_plugins/src/aainferpass/: imp.rs  mod.rs
gst_plugins/src/aainfersink/: imp.rs  mod.rs
gst_plugins/src/gstreamer/: mod.rs
gst_plugins/src/gstreamer/aainferpass/: imp.rs
gst_plugins/src/identity/: imp.rs
gst_plugins/src/util/: crossbeam_request.rs  mod.rs
gst_tflite_infer/: Cargo.toml  README.md
gst_tflite_infer/src/: detector_service.rs  frame.rs
gst_tflite_infer/src/gstreamer/aainferpass/: imp.rs
gst_tflite_infer/src/gstreamer/aainfersink/: imp.rs
hal/: Cargo.toml
hal/examples/: accurate_sleep.rs  check_duration_conversion.rs  fake_stepper.rs  pi_gpios.rs  pi_pigpio.rs  pi_stepper.rs  stepper_spring.rs  stepper_velocity.rs
hal/src/: gpio.rs  lib.rs  prelude.rs  stepper.rs  thread.rs
hal/src/clock/: get_time.rs  mod.rs  timer.rs
hal/src/clock/timer/: blocking.rs  mod.rs  non_blocking.rs
hal/src/motion/: mod.rs  springs.rs
hal/src/motion/moving_target/: mod.rs  state.rs
hal/src/motion/spring/: config.rs  eval.rs  mod.rs  pulse.rs
hal/src/pantilt/: mod.rs  worker.rs
hal/src/stepper/velocity/: mod.rs
hal/src/timer/: timer.rs
learn/: icevision-environment.yml
model_training/: prepare-dataset.ipynb  tflite-training.ipynb
rtsp_storage/: .gitignore  README.md  rtsp-simple-server.yml
scratch/: Cargo.toml
scratch/examples/: find_target_color.rs  hello_world.rs
sys/: Cargo.toml
sys/examples/: accel_ramp.rs  list_gpios.rs  stepper_sleep_mode.rs  stepper_spin.rs  stepper_spring.rs
sys/src/gpio/: fake.rs  mod.rs
sys/src/pantilt/: hal.rs  mod.rs  worker.rs
sys/src/timer/: mod.rs  timer.rs
tasks/: Cargo.toml  env_check.haku
tasks/src/: cargo.rs  cli.rs  cmd.rs  ctx.rs  docker.rs  lib.rs
tasks/src/cad/: display.rs  manifest.rs  mod.rs  models.rs  onshape_client.rs  pull.rs
tasks/src/docker/: build.rs  mod.rs  run.rs
tflite_support/: Cargo.toml  README.md  build.rs
tflite_support/build-res/: shared_libs.bzl
tflite_support/examples/: coral_delegate.rs
tflite_support/src/: error.rs  lib.rs  object_detector.rs
tflite_support_rs/: .gitignore  Cargo.toml  build.rs
tflite_support_rs/build-res/: bazel_op_config.rc  shared_libs.bzl  shared_objects.bzl
tflite_support_rs/docker/: docker_setup.aarch64.sh
tflite_support_rs/src/: lib.rs  object_detector.rs
tflite_support_rs/tests/: sample.tflite
tools/: aatask  cargo-task  cargo-unstable  hptask
web/: Cargo.toml
(+2 files in other folders)
