[package]
name = "aa-app"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "aa-app"
path = "src/bin/arena_autocam.rs"

[lib]
name = "arena_autocam"
path = "src/lib.rs"

[dependencies]
# Project dependencies
aa-foundation = { path = "../foundation" }
aa-sys = { path = "../sys" }
tflite-support = { path = "../tflite_support" }

# 3rd party dependencies
anyhow = { version = "1.0.66", features = ["backtrace"] }
byte-slice-cast = "1.2.2"
cairo-rs = "0.16.1"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
derive_more = "0.99.17"
figment = { version = "0.10.8", features = ["toml"] }
glib = "0.16.2"
gst = { package = "gstreamer", version = "0.19" }
gst-app = { package = "gstreamer-app", version = "0.19", features = ["v1_20"] }
gst-audio = { package = "gstreamer-audio", version = "0.19", features = ["v1_20"] }
gst-base = { package = "gstreamer-base", version = "0.19", features = ["v1_20"] }
gst-video = { package = "gstreamer-video", version = "0.19", features = ["v1_20"] }
image = "0.24.5"
lazy_static = "1.4.0"
once_cell = "1.15.0"
rand = "0.8.5"
regex = "1.6.0"
serde = "1.0.147"
serde_derive = "1.0.147"
strfmt = "0.2.2"
strum = "0.24.1"
strum_macros = "0.24.3"
termcolor = "1.1.3"
termion = "2.0.1"
textwrap = "0.16.0"
toml = "0.5.9"

[dependencies.palette]
git = "https://github.com/Ogeon/palette"
rev = "2c69f1c"
features = ["std"]

[features]
default = ["synthesize-libcamera-streams"]
# Necessary for systems where camera device only produces a single stream
synthesize-libcamera-streams = []
use-v4l2-h264-encoding = []
