[package]
name = "aa-foundation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
approx = "0.5.1"
fugit = "0.3.6"
indoc = "1.0.7"
libc = "0.2.137"
nu-ansi-term = "0.46.0"
once_cell = "1.16.0"
tracing = { version = "0.1", features = ["valuable"] }
tracing-core = { version = "0.1.30", features = ["valuable"] }
tracing-subscriber = { version = "0.3.16", features = [
  "registry",
  "std",
  "env-filter",
  "valuable",
] }
valuable = { version = "0.1.0", features = ["derive"] }

[dependencies.palette]
git = "https://github.com/Ogeon/palette"
rev = "2c69f1c"
features = ["std"]

[dev-dependencies]
num-format = "0.4.3"
