[package]
name = "aa-gst-plugins"
version = "0.1.0"
edition = "2021"
description = "Arena Autocam Plugins"
repository = "https://github.com/shyndman/arena-autocam/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", version = "0.18.8" }
gst-base = { package = "gstreamer-base", version = "0.18.0" }
gst-video = { package = "gstreamer-video", version = "0.18.7" }
once_cell = "1.0"

[lib]
name = "aagstplugins"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"
