[package]
name = "aa-gst-plugins"
version = "0.1.0"
edition = "2021"
description = "Arena Autocam Plugins"
repository = "https://github.com/shyndman/arena-autocam/"

[lib]
name = "aagstplugins"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
crossbeam = "0.8.2"
gst = { package = "gstreamer", version = "0.18.8" }
gst-base = { package = "gstreamer-base", version = "0.18.0" }
gst-video = { package = "gstreamer-video", version = "0.18.7" }
image = "0.24.4"
lazy_static = "1.4.0"
once_cell = "1.0"
tflite-support-rs = { path = "../tflite_support_rs", features = [
  "xnnpack",
  "coral_tpu",
] }

[build-dependencies]
gst-plugin-version-helper = "0.7.3"
