[package]
name = "aa-hal"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.66"
embedded-hal = "1.0.0-alpha.9"
fixed = "1.20.0"
fugit = "0.3.6"
fugit-timer = "0.1.3"
libc = "0.2.137"
nb = "1.0.0"
num-format = "0.4.3"
num-traits = "0.2.15"
ramp-maker = { version = "0.2.0", features = ["std"] }
rppal = { version = "0.14", features = ["hal"] }
smart-leds = "0.3.0"
stepper = { git = "https://github.com/shyndman/hal-stepper", branch = "tracing", features = [
  "a4988",
] }
tracing = "0.1"
typenum = "1.15.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["registry", "std", "env-filter"] }
