[package]
name = "aa-hal"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aa-foundation = { path = "../foundation" }
crossbeam = "0.8.2"
derive_more = "0.99.17"
embedded-hal = "1.0.0-alpha.9"
fixed = "1.20.0"
fugit = "0.3.6"
fugit-timer = "0.1.3"
libc = "0.2.137"
nb = "1.0.0"
num-format = "0.4.3"
num-integer = "0.1.45"
num-rational = "0.4.1"
num-traits = "0.2.15"
once_cell = "1.16.0"
ramp-maker = { version = "0.2.0", features = ["std"] }
rand = "0.8.5"
replace_with = "0.1.7"
rppal = { version = "0.14", features = ["hal"] }
signal-hook = "0.3.14"
smart-leds = "0.3.0"
tracing = "0.1"
typenum = "1.15.0"

[dependencies.anyhow]
version = "1.0.66"
features = ["std", "backtrace"]

[dependencies.stepper]
path = "../../hal-stepper"
# git = "https://github.com/shyndman/hal-stepper"
# branch = "sleep-mode"
features = ["a4988"]
