[package]
name = "aa-task"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "aa_task"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
cargo_metadata = "0.15.1"
clap = { version = "4.0.25", features = ["derive", "wrap_help"] }
clap_complete = "4.0.5"
cmd_lib = "1.3.0"
ctrlc = "3.2.3"
dns-lookup = "1.0.8"
env_logger = "0.9.3"
escargot = "0.5.7"
log = "0.4.17"
sysinfo = "0.26.7"
