[package]
name = "aa-task"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "aa_task"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
base64 = "0.21"
cargo_metadata = "0.15.1"
clap = { version = "4.0.25", features = ["derive", "wrap_help"] }
clap_complete = "4.0.5"
cmd_lib = "1.3.0"
ctrlc = "3.2.3"
dns-lookup = "1.0.8"
dotenv = "0.15"
env_logger = "0.9.3"
escargot = "0.5.7"
hmac = "0.12"
http = "0.2"
httpdate = "1.0"
lazy_static = "1.4.0"
log = "0.4.17"
mime = "0.3"
percent-encoding = "*"
rand = "0.8"
regex = "1.8.4"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.26.7"
toml = "0.7.3"
url = { version = "*", features = ["serde"] }
