[package]
name = "tflite-support"
version = "0.0.1"
authors = ["Scott Hyndman <shyndman@gmail.com>"]
edition = "2021"
description = "Rust wrapper of the Tensorflow Lite Support library's Object Detector C API"
publish = false

[lib]
name = "tflite_support"
path = "src/lib.rs"

[[example]]
name = "coral_delegate"
path = "examples/coral_delegate.rs"
required-features = ["coral_tpu"]

[features]
default = ["coral_tpu", "xnnpack"]
xnnpack = []
xnnpack_qu8 = ["xnnpack"]
xnnpack_qs8 = ["xnnpack"]
coral_tpu = []

[dependencies]
anyhow = "1.0.66"
derive_more = "0.99.17"
findshlibs = "0.10.2"

[build-dependencies]
anyhow = "1.0.66"
bindgen = "0.60.1"
fs_extra = "1.2.0"

[build-dependencies.const_format]
version = "0.2.30"
features = ["fmt"]
